<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DescriptionMovie">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Violeta"
        android:paddingBottom="@dimen/padding_default">

        <ImageView
            android:id="@+id/imageViewMovieDescription"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/Violeta"
            android:contentDescription="@string/description_image_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_back"
            android:text="@string/Button_back"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/padding_max"
            app:layout_constraintStart_toStartOf="@id/imageViewMovieDescription"
            app:layout_constraintTop_toTopOf="@id/imageViewMovieDescription" />

        <TextView
            android:id="@+id/textViewTitleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_default"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/textViewGenresDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Title Movie" />

        <TextView
            android:id="@+id/textViewGenresDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_default"
            android:background="@drawable/margin_card_genres"
            android:padding="@dimen/padding_min"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/imageViewMovieDescription"
            app:layout_constraintStart_toStartOf="@id/textViewTitleDescription"
            tools:text="Genre Movie" />

        <TextView
            android:id="@+id/textViewSynopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:text="@string/Synopsis"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewMovieDescription" />

        <TextView
            android:id="@+id/textviewSeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/padding_default"
            android:background="@color/transparent"
            android:text="@string/see_more"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="@color/opaque_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewMovieDescription" />

        <TextView
            android:id="@+id/textViewOverviewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSynopsis"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginTop="@dimen/padding_min"
            android:layout_marginHorizontal="@dimen/padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSynopsis"
            tools:text="@string/detailed_description" />

        <TextView
            android:id="@+id/textViewCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOverviewDescription"
            android:layout_marginTop="18dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/textViewOverviewDescription"
            app:layout_constraintTop_toBottomOf="@id/textViewOverviewDescription" />

        <ImageView
            android:id="@+id/imageViewCast"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@+id/textViewCast"
            android:layout_marginTop="@dimen/padding_default"
            android:contentDescription="@string/description_background_image"
            app:layout_constraintStart_toStartOf="@id/textViewCast"
            app:layout_constraintTop_toBottomOf="@id/textViewCast" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>